payhub-page-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payhub-page-deployment
  labels:
    app: payhub-page
spec:
  replicas: 2 # Number of replicas
  selector:
    matchLabels:
      app: payhub-page
  template:
    metadata:
      labels:
        app: payhub-page
    spec:
      containers:
      - name: payhub-page-container
        image: tushant029/nextjs-app:latest # Replace with your Docker Hub image
        ports:
        - containerPort: 8999
---
apiVersion: v1
kind: Service
metadata:
  name: payhub-page-service
spec:
  selector:
    app: payhub-page
  ports:
    - protocol: TCP
      port: 80 # External port to access the application
      targetPort: 8999 # Port inside the container
  type: LoadBalancer
